Added Favorites functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,14 +27,17 @@
     <string-array name="movie_preferences">
         <item>@string/popular_label</item>
         <item>@string/top_rated_label</item>
+        <item>@string/favorites_label</item>
     </string-array>
 
 
-    <!-- Shared Preferences values -->
     <string name="popular_label">Popular</string>
-    <string name="top_rated_label">Top Rated</string>
-    <string name="sort_criteria_key">sort_criteria</string>
     <string name="popular">popular</string>
+    <string name="top_rated_label">Top Rated</string>
     <string name="top_rated">top_rated</string>
+    <string name="favorites_label">Favorites</string>
+    <string name="favorites">favorites</string>
+    <string name="sort_criteria_key">sort_criteria</string>
+
 
 </resources>
