Added "No Favorites added" message that will appear when user selects on Favorites, but hasn't marked any movies as favorite yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="average_rating_ten_label">/ 10</string>
 
 
+    <string name="no_favorites">No favorite movies.</string>
 
 
     <!-- JSON Mapping Keys -->
