--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="top_rated_label">Top Rated</string>
     <string name="top_rated">top_rated</string>
     <string name="favorites_label">Favorites</string>
+    <string name="favorite_label">Favorite</string>
     <string name="favorites">favorites</string>
     <string name="sort_criteria_key">sort_criteria</string>
     <string name="details_label">Details</string>
