--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="trailers_label">Trailers</string>
     <string name="reviews_label">Reviews</string>
 
+    <string name="youtube_intent_dialog_message">Open trailer with</string>
 
 
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
