--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,8 +50,9 @@
     <string name="favorites">favorites</string>
     <string name="sort_criteria_key">sort_criteria</string>
     <string name="details_label">Details</string>
-    <string name="trailers_label">Trailers</string>
-    <string name="reviews_label">Reviews</string>
+    <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
+    <string name="not_available">Data not available.</string>
 
     <string name="youtube_intent_dialog_message">Open trailer with</string>
 
