Refactored UI of MainActivity screen to display options via a ViewPager instead of DrawerLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,9 @@
     <!-- Home Navigation Items -->
 
 
-
+    <string name="app_adapter_movies">movies_adapter</string>
+    <string name="app_adapter_trailers">trailers_adapter</string>
+    <string name="app_adapter_reviews">reviews_adapter</string>
 
 
     <!-- JSON Mapping Keys -->
