Added movie image as part of app bar layout. Rezied movie images on main activity screen. Changed Movies Data Source to fetch sharper images.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
 
+    <string name="movie_image_content_description">Movie Image</string>
 
 
     <!-- Test Strings -->
