Changed MovieDetailFragment to become a DetailBaseListFragment to fix the issue of the app bar collapsing for that tab improperly, compared to the other two tabs on the screen. Added "No trailers/reviews" message when no trailers or reviews are present for a movie.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="app_movie_trailers_fragment">movie_trailers_fragment</string>
     <string name="app_movie_reviews_fragment">movie_reviews_fragment</string>
 
+    <string name="trailers_not_found_message">No trailers available</string>
+    <string name="reviews_not_found_message">No reviews available</string>
+
 
     <!-- JSON Mapping Keys -->
     <string name="results">results</string>
