--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
     <string name="heart_clip_shown">M0 0 L56 0 L56 56 L0 56 Z</string>
 
 
-
+    <string name="movie_poster_shared_element_transition_name">movie_poster_transition_name</string>
 
     <!-- Test Strings -->
     <string name="tools_review_author">Author</string>
